# ai-devops-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
code-review/: action.yml  reviewer.py
code-review/tests/: test_reviewer.py
crates/code-review-cli/: Cargo.toml
crates/code-review-cli/src/: github.rs  main.rs  review.rs
crates/docgen-cli/: Cargo.toml
crates/docgen-cli/src/: apply.rs  process.rs
crates/toolkit-core/: Cargo.toml
crates/toolkit-core/src/: config.rs  error.rs  git.rs  vllm.rs
docgen/: docgen.py
docgen/tests/: test_docgen.py
docs/: code-review.md  docgen.md
docs/superpowers/plans/: 2026-05-11-docgen-cli.md
python_shim/ai_devops_toolkit/: __init__.py
scripts/: npm-postinstall.js
