[project]
name = "ai-devops-toolkit"
version = "0.1.0"
description = "AI DevOps Toolkit"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "gitpython>=3.1",
    "pytest>=8.0",
]

[project.scripts]
docgen = "docgen.docgen:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docgen"]

[tool.pytest.ini_options]
testpaths = ["docgen/tests", "code-review/tests"]
